removed unused stuff from build.gradle